button alignment fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,9 +6,7 @@
   height: 18px;
 }
 
-::-webkit-scrollbar-track {
-  /*opacity: 0;*/
-}
+
 
 ::-webkit-scrollbar-thumb {
   background: #DEDEDE;
